--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # OS generated files #
 ######################
+node_modules
 .DS_Store
 .DS_Store?
 ._*
@@ -7,3 +8,5 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+.shopify
